# cpp-primer

./: '  .clang-format  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DebugEx.hpp  README.md  SECURITY.md  Sales_data.cpp  Sales_data.hpp  Sales_data_copy.cpp  Sales_data_copy.hpp  Sales_item.h  ]  allcppfiles.txt  cPrimer_2.sln  keepline  log.txt  logs.txt  main.cpp  out1.txt  out2.txt  person.txt  test.cpp
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  improvement_suggestion.md  learning_question.md
Concept_Examples/file-streams/: main.cpp
Debug/: DebugEx.hpp  main.cpp  output.txt  test.r  testing.txt
SALES_PROJECT/: main.cpp
SUBJECT_EXAMPLES_extended/custom_syntax/: main.cpp
all_projects/library-search-with-unordered-map/: BookLibrary.cpp  book.cpp  main.cpp
all_projects/transaction-cpp-demo/: Sales_data.cpp  main.cpp
cPrimer_2/: Sales_data.h  Sales_item.h  add_ints.txt  cPrimer_2.vcxproj  cPrimer_2.vcxproj.filters  erase_puncs.txt  hextest.txt  input_add_item.txt  inputs.txt  main.cpp  opposite_pairs.txt  output.txt
chapters/5/: main.cpp
chapters/5-duplicate-word-finder/: README.md
chapters/6-functions-and-debugging/: README.md
chapters/7/: allcppfiles.txt  main.cpp
chapters/7-classes-and-objects/: README.md
chapters/7.3/: main.cpp
chapters/8-streams/: main.cpp
chapters/8.3/: logs.txt  main.cpp
chapters/9-containers-and-strings/: 01_sequential_containers_basics.cpp  02_container_safety_and_access.cpp  03_associative_containers.cpp  04_container_adapters.cpp  05_string_operations.cpp  README.md  (+3 more)
compiler_check/: main.cpp
cppPrimer/: '  .clang-format  .gitignore  Sales_data.cpp  Sales_data.hpp  Version_test.h  allcppfiles.txt  cPrimer_2.vcxproj  main.cpp
creating_windows_window/: main.cpp
debug-class-example/: main.cpp
debug-example/: main.cpp  regular.txt  test.html  testing.txt
delete/: NoDefault.cpp  main.cpp
file-streams/: log.txt  logs.txt  main.cpp  test.txt  testing.txt
fun/: main.cpp
headers/: Anscii.hpp  console_utils.h
library-project/: BookLibrary.cpp  allcppfiles.txt  book.cpp  main.cpp
local-examples/: BookLibrary.cpp  BookLibrary.hpp  book.cpp  book.hpp  books.txt  main.cpp
mac_practice/: input  input.txt  main.cpp  output_1.txt  output_2.txt
object-tracking-and-more/: main.cpp
portfolio-projects/terminal-menu/: .clangd  ALL_BUILD.vcxproj  CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  compile_commands.json  main.cpp
practice-cpps/: findstring.cpp  keepline.cpp  utils.h
random-generator/: C.hpp  NoDefault.hpp  Tracker.cpp  Tracker.hpp  allcppfiles.txt  main.cpp
references/: Anscii.hpp
sales-transaction-project/: Sales_data_copy.cpp  Sales_data_copy.hpp  main.cpp
spaceship-operator/: main.cpp
testing/: main.cpp
tests/: vector_element_access_safety_test.cpp
text-files/: hextest.txt  input_add_item.txt  person.txt
(+326 files in other folders)
